# axum-eg-rs

./: Cargo.toml  README.md
src/: db.rs  main.rs  templates.rs
templates/: controls.html  index.html  timer.html  timing.html  timings.html
