[package]
name = "axum-eg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "serde", "serde-json", "markdown"] }
askama_axum = { version = "0.3.0" } # Error with version 0.4.0
axum = { version = "0.6.20", features = ["macros"] }
clap = { version = "4.4.12", features = ["derive", "env"] }
env_logger = "0.10.1"
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
tokio = { version = "1.35.1", features = ["full", "macros", "rt-multi-thread"] }
anyhow = "1.0.75"